CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ITKNoiseAdder)

FIND_PACKAGE(ITK REQUIRED COMPONENTS ITKCommon ITKIOImageBase ITKIOMeta ITKIOPNG ITKIOBMP ITKIOJPEG)
INCLUDE(${ITK_USE_FILE})

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

SET(Boost_USE_STATIC_LIBS        ON)
SET(Boost_USE_MULTITHREADED      ON)
SET(Boost_USE_STATIC_RUNTIME     ON)
FIND_PACKAGE(Boost COMPONENTS program_options system filesystem regex REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

FIND_PACKAGE(Log4Cxx REQUIRED)
INCLUDE_DIRECTORIES(${LOG4CXX_INCLUDE_DIR})

ADD_EXECUTABLE(main main.cpp time_utils.cpp cli_parser.cpp common.cpp image_reader.cpp image_writer.cpp ParseUtils.cpp itkThreadSafeMersenneTwisterRandomVariateGenerator.cxx)
tARGET_LINK_LIBRARIES(main ${ITK_LIBRARIES} ${Boost_LIBRARIES} ${LOG4CXX_LIBRARIES})

